--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,13 @@
 </head>
 <body>
 <th:block th:include="templates :: navigator_bar"></th:block>
-<h2>Welcome in Home Budget Manager ! ;) </h2>
+
+
+<div class="container main-window col-12 offset-3" >
+    <div>
+        <h2>Welcome in Home Budget Manager ! ;)</h2>
+    </div>
+</div>
 <th:block th:include="templates :: footer_scripts"></th:block>
 </body>
 </html>
