--- a/src/main/resources/templates/templates.html
+++ b/src/main/resources/templates/templates.html
@@ -9,19 +9,41 @@
     <script th:href="@{/webjars/jquery/3.3.1-1/jquery.min.js}"></script>
     <script th:href="@{/webjars/popper.js/1.14.4/popper.min.js}"></script>
     <script th:href="@{/webjars/bootstrap/4.1.3/js/bootstrap.min.js}"></script>
+    <script src="https://kit.fontawesome.com/609d1e84be.js"></script>
+
 </th:block>
 
 <th:block th:fragment="navigator_bar">
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-        <h5 class="my-0 mr-md-auto font-weight-normal">Home Budget Manager</h5>
-        <nav class="my-2 my-md-0 mr-md-3">
-            <a class="p-2 text-dark" th:href="@{/}">Home</a>
-            <a class="p-2 text-dark" sec:authorize="hasRole('ADMIN')" th:href="@{/admin/user/list}">User list</a>
-        </nav>
-        <a class="btn btn-outline-primary" sec:authorize="!isAuthenticated()" th:href="@{/login}">Login</a>
-        <a class="btn btn-outline-primary" sec:authorize="isAuthenticated()" th:href="@{/logout}">Logout</a>
-        <a class="btn btn-outline-primary" sec:authorize="!isAuthenticated()" th:href="@{/user/register}">Register</a>
-    </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+        <div class="container">
+            <a class="navbar-brand" href="/"><i class="fas fa-home"></i></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/">Home</a>
+                    <li class="nav-item">
+                        <a class="nav-link" sec:authorize="hasRole('ADMIN')" th:href="@{/admin/user/list}">Users</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/income/list}">Income</a>
+                    </li>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" sec:authorize="!isAuthenticated()" th:href="@{/user/register}">Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/logout}">Logout</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" sec:authorize="!isAuthenticated()" th:href="@{/login}">Login</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </th:block>
 
 </html>
