--- a/src/main/resources/templates/incomeList.html
+++ b/src/main/resources/templates/incomeList.html
@@ -38,7 +38,7 @@
         <div class="row colored-row margins" th:classappend="${incomeList} ? return : hidden">
             <div class="col-6 offset-3">
                 <form th:action="@{/income/add}" th:method="get">
-                    <input class="col-12 form-control form-control-sm" type="submit" value="Add new Income">
+                    <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">add new</button>
                 </form>
             </div>
         </div>
