--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -15,12 +15,12 @@
                         <h5 class="card-title text-center">Sign In</h5>
                         <form class="form-signin" th:action="@{/login}" th:method="post">
                             <div class="form-label-group">
-                                <input id="input-email" name="username" class="form-control" placeholder="Email address" required>
+                                <input id="input-email" name="username" class="form-control" placeholder="Email address" required autofocus>
                                 <label for="input-email">Email address</label>
                             </div>
 
                             <div class="form-label-group">
-                                <input type="password" id="input-password" name="password" class="form-control" placeholder="Password" required autofocus>
+                                <input type="password" id="input-password" name="password" class="form-control" placeholder="Password" required>
                                 <label for="input-password">Password</label>
                             </div>
 
