--- a/src/main/resources/templates/templates.html
+++ b/src/main/resources/templates/templates.html
@@ -10,41 +10,56 @@
     <script th:href="@{/webjars/popper.js/1.14.4/popper.min.js}"></script>
     <script th:href="@{/webjars/bootstrap/4.1.3/js/bootstrap.min.js}"></script>
     <script src="https://kit.fontawesome.com/609d1e84be.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    </head>
+</th:block>
 
 </th:block>
 
 <th:block th:fragment="navigator_bar">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="/"><i class="fas fa-home"></i></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/">Home</a>
-                    <li class="nav-item">
-                        <a class="nav-link" sec:authorize="hasRole('ADMIN')" th:href="@{/admin/user/list}">Users</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" sec:authorize="hasAnyRole('ADMIN','USER')" th:href="@{/income/list}">Income</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" sec:authorize="hasAnyRole('ADMIN','USER')" th:href="@{/expenditure/list}">Expenditure</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" sec:authorize="hasAnyRole('ADMIN','USER')" th:href="@{/upcomingPayments/list}">Upcoming Payment</a>
-                    </li>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" sec:authorize="!isAuthenticated()" th:href="@{/user/register}">Register</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/logout}">Logout</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" sec:authorize="!isAuthenticated()" th:href="@{/login}">Login</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" role="button" type="button"
+                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fas fa-caret-square-down"></i>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right animate slideIn" sec:authorize="hasAnyRole('ADMIN','USER')" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item waves-effect waves-light"
+                               th:href="@{/income/list}">Income</a>
+                            <a class="dropdown-item waves-effect waves-light"
+                               th:href="@{/expenditure/list}">Expenditure</a>
+                            <a class="dropdown-item waves-effect waves-light" th:href="@{/upcomingPayments/list}">Upcoming
+                                Payments</a>
+                            <a class="dropdown-item waves-effect waves-light" sec:authorize="hasRole('ADMIN')"
+                               th:href="@{/admin/user/list}">Users</a>
+                        </div>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown2" role="button" type="button"
+                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-user"></i>
+                    </a>
+                        <div class="dropdown-menu dropdown-menu-right animate slideIn"
+                             aria-labelledby="navbarDropdown2">
+                            <a class="dropdown-item waves-effect waves-light" sec:authorize="!isAuthenticated()"
+                               th:href="@{/user/register}">Register</a>  </a>
+                            <a class="dropdown-item waves-effect waves-light" sec:authorize="isAuthenticated()"
+                               th:href="@{/logout}">Logout</a> </a>
+                            <a class="dropdown-item waves-effect waves-light" sec:authorize="!isAuthenticated()"
+                               th:href="@{/login}">Login</a>  </a>
+                        </div>
                     </li>
                 </ul>
             </div>
