--- a/src/main/resources/templates/targetForm.html
+++ b/src/main/resources/templates/targetForm.html
@@ -3,44 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <th:block th:include="templates :: headers"></th:block>
-    <title>Update Income</title>
+    <title>Target Form</title>
 </head>
 <body>
-</div>
 <th:block th:include="templates :: navigator_bar"></th:block>
 <div class="container">
-    <form class="form" th:action="@{/income/update}" th:method="post" th:object="${income}">
-        <div class="form-group">
-            <input id="id" type="text" class="form-control"  th:field="*{id}" hidden>
-        </div>
+    <form class="form" th:action="@{/target/save}" th:method="post" th:object="${newTarget}">
         <div class="row colored-row">
-            <div class="col-2">
-                <label for="note">Amount:</label>
-            </div>
-            <div class="col-10">
-                <input class="form-control" id="amount" name="amount" required th:field="*{amount}">
+            <div class="col-12">
+                <h2>Add new</h2>
             </div>
         </div>
         <div class="row colored-row">
             <div class="col-2">
-                <label for="cat">Category:</label>
+                <label for="target">Target name:</label>
             </div>
             <div class="col-10">
-                <select id="cat" class="form-control" th:field="*{category}">
-                    <option th:each="categoryT : ${incomeTypes}" th:value="${categoryT}" th:text="${categoryT}">
-                </select>
+                <input class="form-control" id="target" name="target" required th:field="*{name}">
             </div>
-
+        </div>
+        <div class="row colored-row">
             <div class="col-2">
-                <label for="note">Note:</label>
+                <label for="totalPrice">Total price:</label>
             </div>
             <div class="col-10">
-                <input class="form-control" id="note" name="note" th:field="*{note}">
+                <input class="form-control" id="totalPrice" name="totalPrice" required th:field="*{totalPrice}">
+            </div>
+        </div>
+        <div class="row colored-row">
+            <div class="col-2">
+                <label for="description">Description:</label>
+            </div>
+            <div class="col-10">
+                <input class="form-control" id="description" name="description" th:field="*{description}">
             </div>
         </div>
         <div class="row colored-row">
             <div class="offset-2 col-8">
-                <input class="form-control" type="submit" value="Update">
+                <input class="form-control" type="submit" value="Add">
             </div>
         </div>
     </form>
