--- a/src/main/resources/templates/templates.html
+++ b/src/main/resources/templates/templates.html
@@ -37,11 +37,9 @@
                         </a>
                         <div class="dropdown-menu dropdown-menu-right animate slideIn" sec:authorize="hasAnyRole('ADMIN','USER')" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item waves-effect waves-light"
-                               th:href="@{/income/list}">Income</a>
+                               th:href="@{/payment/list}">payment</a>
                             <a class="dropdown-item waves-effect waves-light"
-                               th:href="@{/expenditure/list}">Expenditure</a>
-                            <a class="dropdown-item waves-effect waves-light" th:href="@{/upcomingPayments/list}">Upcoming
-                                Payments</a>
+                               th:href="@{/target/list}">Target</a>
                             <a class="dropdown-item waves-effect waves-light" sec:authorize="hasRole('ADMIN')"
                                th:href="@{/admin/user/list}">Users</a>
                         </div>
